--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,9 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
